# fuckucodepy

./: .gitignore  CHANGELOG.md  MIT  README.md  analyze.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_project.py  test_simple.py
docs/: 00-overview.md  01-architecture.md  02-core-modules.md  03-parsers.md  04-metrics.md  05-reports.md  06-cli.md  07-testing.md  08-deployment.md
src/fuck_u_code/: __init__.py
src/fuck_u_code/analyzers/: __init__.py  code_analyzer.py  interfaces.py  models.py
src/fuck_u_code/cli/: __init__.py  commands.py  main.py  options.py
src/fuck_u_code/common/: __init__.py  constants.py  exceptions.py  file_utils.py  language_detector.py
src/fuck_u_code/metrics/: __init__.py  comment_ratio.py  complexity.py  factory.py  function_length.py  interfaces.py  models.py
src/fuck_u_code/parsers/: __init__.py  factory.py  interfaces.py  models.py  python_parser.py
tests/: test_basic_functionality.py
tests/fixtures/: sample_bad_code.py  sample_good_code.py
